mandoc: Vendor import of upstream at 2025-09-26

Interesting changes:
+ mandoc db: Improve case sorting, found by our very own markj
+ history: Add macros for version 8 and 10 AT&T Unix
+ linter: Warn on blank lines in man(7) like mdoc(7)
+ manuals: Improve precision, man(7) syntax table, and roff(7) specifics
+ manuals: Fix PDF/PS footer regression detailed in our PR: 289786

PR:		289786
MFC after:	3 days

(cherry picked from commit 59fc2b0166f71c791113379d16b8cef7039f289d)